pom-lexer/src/snapshots/errors.snap
---
source: pom-lexer/src/tests.rs
expression: "lex(\"55 ^ $ 47\")"
---
(
    [
        Token {
            kind: Int,
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Invalid(
                Id<Error>(0),
            ),
            span: Span {
                start: 3,
                end: 4,
            },
        },
        Token {
            kind: Invalid(
                Id<Error>(1),
            ),
            span: Span {
                start: 5,
                end: 6,
            },
        },
        Token {
            kind: Int,
            span: Span {
                start: 7,
                end: 9,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 4294967295,
                end: 4294967295,
            },
        },
    ],
    Arena(
        [
            Error {
                kind: UnknownToken,
                span: Span {
                    start: 3,
                    end: 4,
                },
            },
            Error {
                kind: UnknownToken,
                span: Span {
                    start: 5,
                    end: 6,
                },
            },
        ],
    ),
)
